tests/type_errors/adding_strings_is_not_allowed.sy
mod A


def i
  : forall a. let Num a. a -> a
  : a = a + a

-- NOTE: this program will compile `i ' "ABC"` because the indirection discards the requirements
def main : Str = i "ABC"

--+ expected exit status: 7
--+ expected stderr:
--+ > The requirements are not valid here.
--+ 
--+ '@ Str' 
--+ is not
--+ (class '@ Num')
--+ 
--+ tests/type_errors/adding_strings_is_not_allowed.sy
--+   9| def main : Str = i "ABC"
--+  10|

